# astralive

./: .env.example  .gitattributes  .gitignore  CLAUDE_ACCESS_GUIDE.md  GITHUB_STATUS.md  LICENSE  README.md  china-providers.env.example  package.json  pnpm-lock.yaml  start.bat
apps/server/: modvii_server.py  pyproject.toml
apps/server/app/: __init__.py  config.py  main.py
apps/server/app/api/: routes_health.py  routes_session.py  websocket.py
apps/server/app/contracts/: events.py  media.py  model_io.py
apps/server/app/core/: cost_estimator.py  cost_meter.py  event_bus.py  privacy_guard.py  session_state.py
apps/server/app/providers/: google_genai_client.py  provider_container.py  raw_usage.py  registry.py  vertex_ai_client.py
apps/server/app/providers/asr/: __init__.py  base.py  google_genai.py  local_whisper.py  mock.py  openai_compatible.py
apps/server/app/providers/llm/: base.py  mock.py  ollama.py  openai_compatible.py  streaming.py  vertex_ai.py
apps/server/app/providers/realtime/: __init__.py  base.py  google_genai_live.py  mock.py
apps/server/app/providers/tts/: __init__.py  base.py  cosyvoice3.py  google_genai.py  mock.py  openai_compatible.py
apps/server/app/providers/vision/: base.py  mock.py  openai_compatible.py  (+2 more)
apps/server/app/services/: audio_service.py  avatar_service.py  dialogue_service.py  prompt_security_service.py  vision_service.py  wake_service.py
apps/server/app/storage/: db.py  models.py
apps/server/app/tests/: test_cost_estimator.py  test_health.py  test_provider_lifecycle.py  test_services.py  test_vision_structured.py
(+112 files in other folders)
