[project]
name = "modvii-server"
version = "0.1.0"
description = "MODVII FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-auth>=2.38.0",
    "google-genai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.30.5",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pyinstaller>=6.10.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.6",
    "websockets>=12.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
